--- a/values.vault.yml
+++ b/values.vault.yml
@@ -68,7 +68,7 @@ injector:
   # image sets the repo and tag of the vault-k8s image to use for the injector.
   image:
     repository: "hashicorp/vault-k8s"
-    tag: "1.3.1"
+    tag: "latest"
     pullPolicy: IfNotPresent
 
   # agentImage sets the repo and tag of the Vault image to use for the Vault Agent
@@ -76,7 +76,7 @@ injector:
   # required.
   agentImage:
     repository: "hashicorp/vault"
-    tag: "1.15.2"
+    tag: "latest"
 
   # The default values for the injected Vault Agent containers.
   agentDefaults:
@@ -377,8 +377,8 @@ server:
 
   image:
     repository: "hashicorp/vault-enterprise"
-    tag: "latest"
     #tag: "latest"
+    tag: "1.18.0-rc1-ent"
     # Overrides the default Image Pull Policy
     pullPolicy: IfNotPresent
 
@@ -1082,7 +1082,7 @@ csi:
 
   image:
     repository: "hashicorp/vault-csi-provider"
-    tag: "1.4.1"
+    tag: "latest"
     pullPolicy: IfNotPresent
 
   # volumes is a list of volumes made available to all containers. These are rendered
@@ -1167,7 +1167,7 @@ csi:
 
     image:
       repository: "hashicorp/vault"
-      tag: "1.15.2"
+      tag: "latest"
       pullPolicy: IfNotPresent
 
     logFormat: standard
